--- a/BadAliensDart.html
+++ b/BadAliensDart.html
@@ -1,10 +1,11 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>BadAliensDart</title>
   </head>
   <body>
     <h1>BadAliensDart</h1>
-    <h2 id="status">dart is not running</h2>
-    <script type="text/javascript" src="BadAliensDart.dart.app.js"></script>
+    <canvas id="surface" width="800" height="600" style="border: 1px solid red"></canvas>
+    <script type="text/javascript" src="BadAliensDart.dart.js"></script>
   </body>
 </html>
