--- a/BadAliensDart.html
+++ b/BadAliensDart.html
@@ -6,6 +6,7 @@
   <body>
     <h1>BadAliensDart</h1>
     <canvas id="surface" width="800" height="600" style="border: 1px solid red"></canvas>
-    <script type="text/javascript" src="BadAliensDart.dart.js"></script>
+    <script type="application/dart" src="BadAliensDart.dart"></script>
+    <script src="http://dart.googlecode.com/svn/branches/bleeding_edge/dart/client/dart.js"></script>
   </body>
 </html>
