update to latest M1

--- a/web/BadAliensDart.html
+++ b/web/BadAliensDart.html
@@ -6,6 +6,7 @@
   <body>
     <h1>BadAliensDart</h1>
     <canvas id="surface" width="800" height="600" style="border: 1px solid red"></canvas>
-    <script type="text/javascript" src="BadAliensDart.dart.js"></script>
+    <script type="application/dart" src="BadAliensDart.dart"></script>
+    <script type="text/javascript" src="dart.js"></script>
   </body>
 </html>
