--- a/web/BadAliensDart.html
+++ b/web/BadAliensDart.html
@@ -7,6 +7,6 @@
     <h1>BadAliensDart</h1>
     <canvas id="surface" width="800" height="600" style="border: 1px solid red"></canvas>
     <script type="application/dart" src="BadAliensDart.dart"></script>
-    <script type="text/javascript" src="dart.js"></script>
+    <script type="text/javascript" src="packages/browser/dart.js"></script>
   </body>
 </html>
